--- a/index.html
+++ b/index.html
@@ -21,19 +21,24 @@
     <main>
         <ul class="shopping-list roboto-regular">
             <li>
-                <input type="checkbox" id="pickles"><label for="pickles">A lot of pickles</label>
+                <input type="checkbox" id="pickles">
+                <label for="pickles" title=" (for the next lessons about CSS)">A lot of pickles</label>
             </li>
             <li>
-                <input type="checkbox" id="apples"><label for="apples">10 apples</label>
+                <input type="checkbox" id="apples">
+                <label for="apples" title=" (for more CSS manipulations)">10 apples</label>
             </li>
             <li>
-                <input type="checkbox" id="oranges"><label for="oranges">20 oranges</label>
+                <input type="checkbox" id="oranges">
+                <label for="oranges" title=" (because they are awesome)">20 oranges</label>
             </li>
             <li>
-                <input type="checkbox" id="plates"><label for="plates">13 plates</label>
+                <input type="checkbox" id="plates">
+                <label for="plates" title=" (hm... they always dissapear)">13 plates</label>
             </li>
             <li>
-                <input type="checkbox" id="bentos"><label for="bentos">15 bentos</label>
+                <input type="checkbox" id="bentos">
+                <label for="bentos" title=" (for the next lessons about CSS)">15 bentos</label>
             </li>
             <li>
                 <input type="checkbox" id="bottle">
